--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "@fontsource/inter": "^5.0.19",
+    "@reduxjs/toolkit": "^2.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
